k8s-manifests/base/gatewayservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
    - port: 8084
